# Stacks

./: .gitignore  README.md
.GENERAL KEY CONCEPTS FOR ALL/: Readme.md
.NET/: Checking Prerequisites for the Stack.txt  Use Case.txt
.What is an LLM/: Readme.md
Architectures/: Readme.md
CakePHP/: Checking Prerequisites for the Stack.txt  Use Case.txt
Datasets/: Readme.md
Django/: Checking Prerequisites for the Stack.txt  Use Case.txt
FastAPI/: Checking Prerequisites for the Stack.txt  What is..txt
Flask/: Checking Prerequisites for the Stack.txt  What is..txt
Flutter/: Checking Prerequisites for the Stack.txt  Use Case.txt
Hapi/: Checking Prerequisites for the Stack.txt  Use Case.txt
Kivy/: What is Kivy.txt
Laravel/: Checking Prerequisites for the Stack.txt  What is..txt
MEAN/: Checking Prerequisites for the Stack.txt  What is..txt
MERN/: Checking Prerequisites for the Stack.txt  Readme.md  Stack Info.txt
MERN/3- Projects/Social Media Agent Using CrewAI/linkedin_growth_manager_backend/linkedin_growth_manager/: README.md  pyproject.toml
MERN/3- Projects/Social Media Agent Using CrewAI/linkedin_growth_manager_backend/linkedin_growth_manager/src/linkedin_growth_manager/: crew.py  main.py
MERN/3- Projects/Social Media Agent Using CrewAI/linkedin_growth_manager_backend/linkedin_growth_manager/src/linkedin_growth_manager/config/: agents.yaml  tasks.yaml
MERN/3- Projects/Social Media Agent Using CrewAI/linkedin_growth_manager_backend/linkedin_growth_manager/src/linkedin_growth_manager/tools/: linkedin_api_tool.py  weaviate_tool.py
(+1000 files in other folders)
