[project]
name = "linkedin_growth_manager"
version = "0.1.0"
description = "linkedin_growth_manager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
linkedin_growth_manager = "linkedin_growth_manager.main:run"
run_crew = "linkedin_growth_manager.main:run"
train = "linkedin_growth_manager.main:train"
replay = "linkedin_growth_manager.main:replay"
test = "linkedin_growth_manager.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
